fix spacing in sectionbox at top

--- a/styles.css
+++ b/styles.css
@@ -252,6 +252,11 @@ h3 {
   margin-bottom: 30px;
 }
 
+.section-box p {
+   margin: 0;
+   margin-top: 0.5rem; /* optional small spacing */
+}
+
 .section-react {
   background: #f9efec;
   padding: 7px;
